<resources>
    <string name="app_name">Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="password">password</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="username_or_email">Username or Email</string>
    <string name="create_your_new_account_now">Create your new account now !</string>
    <string name="first_name">First Name</string>
    <string name="open_url">OPEN URL</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? Sign Up</string>
    <string name="have_an_account_sign_in">Have an account ! Sign In</string>
    <string name="logout">Logout</string>
</resources>