<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        tools:context=".ui.view.LoginFragment">


        <TextView
            android:id="@+id/sign_up_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/edt_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="36dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_border"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="60dp"
            android:padding="8dp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/sign_up_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_label" />

        <EditText
            android:id="@+id/edt_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_border"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/username_or_email"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="60dp"
            android:padding="8dp"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/edt_firstName" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_border"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="60dp"
            android:padding="8dp"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/edt_userName" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_password" />


        <TextView
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/have_an_account_sign_in"
            android:textColor="@color/secondaryMainColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>