<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        tools:context=".ui.view.LoginFragment">


        <TextView
            android:id="@+id/sign_in_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_to_your_account"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_label" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_edge"
            android:elevation="10dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0">


            <EditText
                android:id="@+id/edt_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/username_or_email"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="60dp"
                android:padding="8dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="60dp"
                android:padding="8dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:backgroundTint="@color/secondaryMainColor"
                android:padding="16dp"
                android:text="@string/sign_in" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:layerType="software"
                android:src="@drawable/dotted_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/or" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:layerType="software"
                android:src="@drawable/dotted_line" />

        </LinearLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondaryMainColor"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>